css/style.css
/* ... */
a.projects:hover i {
	font-size: 45px;
    text-shadow: -2px -2px 0 #3CB4C9, 2px -2px 0 #3CB4C9, -2px 2px 0 #3CB4C9, 3px 1px 0 #3CB4C9;
    top: 3px;
    -webkit-transition: all ease-in-out 0.1s;
       -moz-transition: all ease-in-out 0.1s;
        -ms-transition: all ease-in-out 0.1s;
         -o-transition: all ease-in-out 0.1s;
            transition: all ease-in-out 0.1s;
    -webkit-transform: rotate(10deg);
       -moz-transform: rotate(10deg);
        -ms-transform: rotate(10deg);
         -o-transform: rotate(10deg);
            transform: rotate(10deg);
}
/* ABOUT ME DESIGN */
/*=================*/
body.about {
    background-image: url(../img/aboutBG.jpg);
    background-position: top center;
    background-repeat: no-repeat;
}
.aboutFirst {
    color: #fff;
    margin: 75px auto 0;
}
.aboutFirst .left, .aboutFirst .right{
    display: inline-block;
    vertical-align: top;
}
.aboutFirst .left img:hover{
    -webkit-transition: all cubic-bezier(1.000, -0.530, 0.405, 1.425) 0.9s;
       -moz-transition: all cubic-bezier(1.000, -0.530, 0.405, 1.425) 0.9s;
        -ms-transition: all cubic-bezier(1.000, -0.530, 0.405, 1.425) 0.9s;
         -o-transition: all cubic-bezier(1.000, -0.530, 0.405, 1.425) 0.9s;
            transition: all cubic-bezier(1.000, -0.530, 0.405, 1.425) 0.9s;
}
.aboutFirst .left img{
    -webkit-transition: all ease-in-out 0.3s;
       -moz-transition: all ease-in-out 0.3s;
        -ms-transition: all ease-in-out 0.3s;
         -o-transition: all ease-in-out 0.3s;
            transition: all ease-in-out 0.3s;
}
.aboutFirst .left img:hover{
    -webkit-transform-origin:60% 70%;
       -moz-transform-origin:60% 70%;
        -ms-transform-origin:60% 70%;
         -o-transform-origin:60% 70%;
            transform-origin:60% 70%;
    -webkit-transform: rotate(-10deg);
       -moz-transform: rotate(-10deg);
        -ms-transform: rotate(-10deg);
         -o-transform: rotate(-10deg);
            transform: rotate(-10deg);
}
.aboutFirst .right{
    height: 500px;
    margin: 10px 30px 0;
    width: 600px;
}
.aboutFirst .right p{
    font-size: 27px;
    text-shadow: 0px 1px 0 #97B9CF;
    color: #173E57;
}
.aboutFirst .right h1{
    font-family: 'Raleway', sans-serif;
    font-size: 114px;
    font-weight: 300;
    text-transform: uppercase;
}
.aboutFirst h1, .aboutFirst p{
    font-family: Tahoma, sans-serif;
    letter-spacing: 3px;
}
.aboutFirst .right a{
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background-color: #B21212;
    border-bottom: solid 1px #000;
    border-radius: 5px;
    border-top: solid 1px #777;
    box-shadow: 0 2px 1px rgba(0,0,0,0.5);
    color: #eee;
    display: block;
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#56534c',GradientType=0 ); /* IE6-9 */
    font-size: 30px;
    font-family: 'Oswald', sans-serif;
    letter-spacing: 2px;
    margin: 30px 0;
    padding: 5px;
    text-align: center;
    text-decoration: none;
    text-shadow: 2px 2px #000;
    text-transform: uppercase;
    width: 400px;
}
.aboutFirst .right a:hover{
    color: #fff;
    box-shadow: 0 5px 5px rgba(0,0,0,0.6);
    margin: 27px 0 3px;
    -webkit-transition: all ease-in-out 0.1s;
       -moz-transition: all ease-in-out 0.1s;
        -ms-transition: all ease-in-out 0.1s;
         -o-transition: all ease-in-out 0.1s;
            transition: all ease-in-out 0.1s;
}
h2.topTab{
    background-color: #222;
    color: #fff;
    font-family: 'Oswald', sans-serif;
    font-size: 36px;
    height:40px;
    margin: 0 auto;
    padding: 0 10px;
    position: relative;
    text-align: center;
    width: 180px;
}
h2.topTab:before{
    border-color: transparent transparent #222 transparent;
    border-style: solid;
    border-width: 0 0 40px 60px;
    content: "";
    height: 0px;
    left: -60px;
    position: absolute;
    width: 0px;
}
h2.topTab:after{
    border-color: transparent transparent transparent #222;
    border-style: solid;
    border-width: 40px 0 0 60px;
    content: "";
    height: 0px;
    position: absolute;
    right: -60px;
    width: 0px;
}
.darkSecond{
    background-color: #222;
    width: 100%;
    padding: 30px 0;
}
.darkSecond .wrapper section{
    margin-top: 35px;
    margin-bottom: 25px;
}
.darkSecond .wrapper section .left, .darkSecond .wrapper section .right{
    display: inline-block;
    vertical-align: top;
}
.darkSecond .wrapper section .left{
    margin-right: 15px;
    width: 610px;
}
.darkSecond .wrapper section .right{
    background-color: #333;
    background-repeat: no-repeat;
    margin-top: 51px;
    padding: 10px 10px 0;
    width: 320px;
}
.darkSecond .wrapper section .right img{
    border: solid 5px #666;
}
.darkSecond .wrapper section .right h5{
    color: #000;
    font-family: 'Oswald', sans-serif;
    font-size: 30px;
    font-weight: 400;
    text-align: center;
    text-shadow: 0 1px 0 #555;
}
.darkSecond h4{
    color: #ddd;
    font-family: 'Raleway', sans-serif;
    font-size: 35px;
    font-weight: 500;
    position: relative;
    margin: 0 auto 20px 10px;
}
.darkSecond .audio h4, .darkSecond .video h4{
    margin-top: 30px;
}
.darkSecond h4 i{
    font-size: 30px;
    margin-right: 10px;
}
.darkSecond .wrapper section h4{
    margin-bottom: 45px;
}
.darkSecond .wrapper section h4:after{
    color: #555;
    content: ".....................................";
    font-family: Tahoma, Verdana;
    font-size: 60px;
    letter-spacing: -1px;
    position: absolute;
    right: -13px;
    text-shadow: 7px 7px 0 #333;
    top: 0;
}
.darkSecond .wrapper section p{
    color: #ccc;
    font-family: Tahoma, sans-serif;
    font-size: 16px;
    margin-bottom: 12px;
}
.darkSecond .wrapper section p a{
    color: #e6451c;
    text-decoration: none;
}
/* WORKS PAGE DESIGN */
/*===================*/
body.works, body.project {
    background-image: url(../img/worksBG.jpg);
    background-position: top center;
    background-repeat: no-repeat;
}
/* ... */

